# avito-intern-task-2025-autumn

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 21d3ab1f6a9a_add_created_at_merged_at_for_pull_.py  383434a2185c_add_default_id_and_is_active_for_user.py  5f481c4c9c2a_init.py  8fb6f27397b1_init.py  a20a8028e573_add_default_status_for_pr.py  a548479f544a_init.py  b9ab0ea7b28c_add_team_members_pull_requests_pull_.py  e81d1b9f6c7d_create_users_teams_tables.py
src/: __init__.py  config.py  db.py  main.py
src/db/: __init__.py  db_helper.py  pull_request_reviewers.py  pull_requests.py
src/models/: __init__.py  pull_request_reviewers.py  pull_requests.py  team_members.py  teams.py  users.py
src/pull_requests/: exceptions.py  models.py  pull_requests.py  repository.py  router.py  schemas.py  service.py
src/repositories/: users.py
src/schemas/: enums.py
src/teams/: exceptions.py  model.py  models.py  repository.py  router.py  schemas.py  service.py
src/users/: model.py  models.py  repository.py  router.py  schemas.py  service.py
