[project]
name = "avito-intern-task-2025-autumn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
